# ticktick-mcp

./: .dockerignore  .env.template  Dockerfile  GET_V2_TOKEN_CHROME.md  GUIDE.md  LICENSE  ONBOARDING.md  README.md  pyproject.toml  railway.toml  requirements.txt
.github/workflows/: ci.yml  railway-deploy.yml  sync-upstream.yml
oauth-proxy/: DEPLOY.md  README.md
oauth-proxy/api/: index.py
scripts/: gen_guide.py  generate_invite.sh  setup.sh
tests/: conftest.py  test_allday_roundtrip.py  test_client_v1.py  test_client_v2_columns.py  test_dates.py  test_declutter.py  test_delete_project.py  test_ensure_helpers.py  test_normalize_date.py  test_oauth_proxy.py  test_routes.py  test_task_tree.py  test_token_store.py
ticktick_mcp/: authenticate.py  cli.py
ticktick_mcp/src/: auth.py  server.py  ticktick_client.py  ticktick_v2_client.py
