[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ticktick-mcp"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for TickTick task management"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Maksim Donskikh" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.10.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "requests>=2.30.0,<3.0.0",
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "fastapi",  # oauth-proxy tests import its FastAPI app
    "httpx",    # starlette TestClient + oauth-proxy
]

[project.scripts]
ticktick-mcp = "ticktick_mcp.cli:main"
ticktick-auth = "ticktick_mcp.authenticate:main"

[project.urls]
Repository = "https://github.com/donskikhmaksim/ticktick-mcp"

[tool.setuptools.packages.find]
include = ["ticktick_mcp*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
